--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
       with: 
-        image: tonistiigi/binfmt:latest
+        image: tonistiigi/binfmt:qemu-v5.2.0
     - name: Set up Docker Buildx
       id: buildx
       uses: docker/setup-buildx-action@v1
